--- a/styles.css
+++ b/styles.css
@@ -327,7 +327,7 @@ h6
     display: none;
     list-style: none;
     position: absolute;
-    inset: 60px 0 250px 100px;
+    inset: 80px 0 200px 0px;
     padding: 10px 0;
     margin: 0;
     border-radius: 6px;
@@ -1156,3 +1156,28 @@ hr
 {
   margin: 0
 }
+
+li
+{
+  list-style: none;
+}
+
+.item
+{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.price
+{
+  margin-left: auto;
+}
+
+
+.chili
+{
+  max-height: 25px;
+
+}
+
